# docs/swagger.yaml
@@ -332,47 +332,6 @@ paths:
       summary: Get model by ID
       tags:
       - model
-    put:
-      parameters:
-      - description: Model ID
-        in: path
-        name: model_id
-        required: true
-        type: integer
-      - description: Model updated data
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/entities.ModelRequest'
-      - default: Bearer <Add access token here>
-        description: Insert your access token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entities.Model'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "401":
-          description: Unauthorized
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Update model
-      tags:
-      - model
   /model/{model_id}/addfile:
     post:
       parameters:
@@ -414,6 +373,48 @@ paths:
       summary: Save model file
       tags:
       - file
+  /model/update/{model_id}:
+    post:
+      parameters:
+      - description: Model ID
+        in: path
+        name: model_id
+        required: true
+        type: integer
+      - description: Model updated data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entities.ModelRequest'
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.Model'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update model
+      tags:
+      - model
   /users:
     post:
       parameters:
@@ -499,47 +500,6 @@ paths:
           schema:
             type: string
       summary: Delete user by ID
-      tags:
-      - user
-    put:
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: integer
-      - description: User updated data
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/entities.UserRequest'
-      - default: Bearer <Add access token here>
-        description: Insert your access token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/entities.User'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "401":
-          description: Unauthorized
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Update user data
       tags:
       - user
   /users/login:
@@ -629,4 +589,88 @@ paths:
       summary: Refresh user session
       tags:
       - Auth
+  /users/update/{user_id}:
+    post:
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      - description: User updated data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entities.UserRequest'
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.User'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update user data
+      tags:
+      - user
+  /users/update/admin/{user_id}:
+    post:
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      - description: User updated data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/entities.UserRequest'
+      - default: Bearer <Add access token here>
+        description: Insert your access token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/entities.User'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update user admin rights
+      tags:
+      - user
 swagger: "2.0"
